--- a/index.html
+++ b/index.html
@@ -14,25 +14,23 @@
     <div class="page">
 
         <header class="header">
-            <div class="header__logo"></div>
-            <div class="header__line"></div>
+            <img class="header__logo" src="images/header__logo.svg" alt="Логотип">
         </header>
-
         <main>
-
             <section class="profile">
-                <div class="profile__avatar"></div>
+                <img class="profile__avatar" src="images/profile__avatar.jpg" alt="Аватар пользователя">
                 <div class="profile__profile-info">
                     <div class="profile__description">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <div class="profile__button-edit"></div>
+                        <button type="button" class="profile__button-edit">
+                            <img class="profile__button-edit-image" src="images/profile__button-edit.svg" alt="Кнопка изменить" >
+                        </button>
                     </div>
                     <p class="profile__job">Исследователь океана</p>
                 </div>
-                <div class="profile__button-add">
-                    <img src="images/profile__button-add.png" alt="Кнопка добавить">
-                </div>
-
+                <button type="button" class="profile__button-add">
+                    <img src="images/profile__button-add.svg" alt="Кнопка добавить">
+                </button>
             </section>
 
             <section class="elements">
@@ -40,68 +38,69 @@
                 <div class="elements__element">
                     <img class="elements__image" src="images/New_York.jpg" alt="Нью-Йорк">
                     <div class="elements__place">
-                        <p class="elements__name">Нью-Йорк</p>
-                        <div class="elements__like"></div>
+                        <h2 class="elements__name">Нью-Йорк</h2>
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
 
                 <div class="elements__element">
                     <img class="elements__image" src="images/Paris.jpg" alt="Париж">
                     <div class="elements__place">
-                        <p class="elements__name">Париж</p>
-                        <div class="elements__like"></div>
+                        <h2 class="elements__name">Париж</h2>
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
 
                 <div class="elements__element">
                     <img class="elements__image" src="images/London.jpg" alt="Лондон">
                     <div class="elements__place">
-                        <p class="elements__name">Лондон</p>
-                        <div class="elements__like"></div>
+                        <h2 class="elements__name">Лондон</h2>
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
 
                 <div class="elements__element">
                     <img class="elements__image" src="images/Dubai.jpg" alt="Дубай">
                     <div class="elements__place">
-                        <p class="elements__name">Дубай</p>
-                        <div class="elements__like"></div>
+                        <h2 class="elements__name">Дубай</h2>
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
 
                 <div class="elements__element">
                     <img class="elements__image" src="images/Tokio.jpg" alt="Токио">
                     <div class="elements__place">
-                        <p class="elements__name">Токио</p>
-                        <div class="elements__like"></div>
+                        <h2 class="elements__name">Токио</h2>
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
 
                 <div class="elements__element">
                     <img class="elements__image" src="images/Saint_Petersburg.jpg" alt="Санкт-Петербург">
                     <div class="elements__place">
-                        <p class="elements__name">Санкт-Петербург</p>
-                        <div class="elements__like"></div>
+                        <h2 class="elements__name">Санкт-Петербург</h2>
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
-
             </section>
-
         </main>
-
-        <footer class="footer">© 2020 Mesto Russia</footer>
+        <footer class="footer">
+            <p class="footer__copyright">© 2020 Mesto Russia</p>
+        </footer>
 
     </div>
 
     <div class="popup">
-        <form class="popup__form">
-            <button type="button" class="popup__button-close"></button>
+        <form class="popup__form" name="infoUser">
+            <button type="button" class="popup__button-close">
+                <img class="popup__button-close-image" src="images/popup__button-close.svg" alt="Закрыть окно редактирования">
+            </button>
             <fieldset class="popup__information">
 
                 <legend class="popup__heading">Редактировать профиль</legend>
 
-                <input type="text" placeholder="Жак-Ив Кусто" class="popup__field popup__name">
-                <input type="text" placeholder="Исследователь океана" class="popup__field popup__job">
+                <input type="text" name="popupName" placeholder="Имя" class="popup__field popup__field_type_name">
+                <input type="text" name="popupJob" placeholder="Профессия" class="popup__field popup__field_type_job">
 
                 <button type="submit" class="popup__button-save">Сохранить</button>
 
