--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 
     <div class="popup">
-        <form class="popup__form" name="infoUser">
+        <form class="popup__form" name="info-user">
             <button type="button" class="popup__button-close">
                 <img class="popup__button-close-image" src="images/popup__button-close.svg" alt="Закрыть окно редактирования">
             </button>
@@ -99,8 +99,8 @@
 
                 <legend class="popup__heading">Редактировать профиль</legend>
 
-                <input type="text" name="popupName" placeholder="Имя" class="popup__field popup__field_type_name">
-                <input type="text" name="popupJob" placeholder="Профессия" class="popup__field popup__field_type_job">
+                <input type="text" name="popup-name" placeholder="Имя" class="popup__field popup__field_type_name">
+                <input type="text" name="popup-job" placeholder="Профессия" class="popup__field popup__field_type_job">
 
                 <button type="submit" class="popup__button-save">Сохранить</button>
 
