--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
     </div>
 
     <div class="popup popup__user">
+
         <form class="popup__form" name="user">
+
             <button type="button" class="popup__button-close">
                 <img class="popup__button-close-image" src="images/popup__button-close.svg" alt="Закрыть окно редактирования">
             </button>
+
             <fieldset class="popup__title">
 
                 <legend class="popup__heading">Редактировать профиль</legend>
@@ -63,10 +66,13 @@
     </div>
 
     <div class="popup popup__place">
+
         <form class="popup__form" name="place">
+
             <button type="button" class="popup__button-close popup__button-close_place">
                 <img class="popup__button-close-image" src="images/popup__button-close.svg" alt="Закрыть окно">
             </button>
+
             <fieldset class="popup__title">
 
                 <legend class="popup__heading">Новое место</legend>
@@ -82,8 +88,9 @@
 
     <div class="popup popup__image">
 
-        <div class="popup__image-view">
-            <img class="popup__img" src="" alt="">
+        <div class="popup__image-container">
+
+            <img class="popup__photo" src="" alt="">
             <div class="popup__caption"></div>
             
             <button type="button" class="popup__button-close popup__button-close_image">
