--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="popup popup_type_user">
 
-        <form class="popup__form" name="user">
+        <form class="popup__form" name="user" action="#" method="post" novalidate autocomplete="off">
 
             <button type="button" class="popup__button-close">
                 <img class="popup__button-close-image" src="images/popup__button-close.svg" alt="Закрыть окно редактирования">
@@ -55,8 +55,15 @@
 
                 <legend class="popup__heading">Редактировать профиль</legend>
 
-                <input type="text" name="popup-name" placeholder="Имя" class="popup__field popup__field_type_name">
-                <input type="text" name="popup-job" placeholder="Профессия" class="popup__field popup__field_type_job">
+                <section class="popup__form-section">
+                    <input class="popup__form-input popup__form-input_type_name" type="text" name="popup-name" placeholder="Имя" required minlength="2" maxlength="40">
+                    <span class="popup__form-input-error"></span>
+                </section>
+      
+                <section class="popup__form-section">
+                    <input class="popup__form-input popup__form-input_type_job" type="text" name="popup-job" placeholder="Профессия" required minlength="2" maxlength="200">
+                    <span class="popup__form-input-error"></span>
+                </section>
 
                 <button type="submit" class="popup__button-save">Сохранить</button>
 
@@ -67,7 +74,7 @@
 
     <div class="popup popup_type_place">
 
-        <form class="popup__form" name="place">
+        <form class="popup__form" name="place" action="#" method="post" novalidate>
 
             <button type="button" class="popup__button-close popup__button-close_place">
                 <img class="popup__button-close-image" src="images/popup__button-close.svg" alt="Закрыть окно">
@@ -77,8 +84,15 @@
 
                 <legend class="popup__heading">Новое место</legend>
 
-                <input type="text" name="popup-place" placeholder="Название" class="popup__field popup__field_type_place">
-                <input type="text" name="popup-image" placeholder="Ссылка на картинку" class="popup__field popup__field_type_image">
+                <section class="popup__form-section">
+                    <input class="popup__form-input popup__form-input_type_place" type="text" name="popup-place" placeholder="Название" required minlength="2" maxlength="30">
+                    <span class="popup__form-input-error"></span>
+                </section>
+      
+                <section class="popup__form-section">
+                    <input class="popup__form-input popup__form-input_type_image" type="url" name="popup-image" placeholder="Ссылка на картинку" required>
+                    <span class="popup__form-input-error"></span>
+                </section>
 
                 <button type="submit" class="popup__button-save">Сохранить</button>
 
@@ -113,6 +127,7 @@
     </template>
 
     <script src="scripts/index.js"></script>
+    <script src="scripts/validate.js"></script>
 
 </body>
 
