Исправлены замечания 1-го ревью (6-я работа)

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 
                 <legend class="popup__heading">Редактировать профиль</legend>
 
-                <section class="popup__form-section">
+                <section>
                     <input class="popup__form-input popup__form-input_type_name" type="text" name="popup-name" placeholder="Имя" required minlength="2" maxlength="40">
-                    <span class="popup__form-input-error"></span>
+                    <span class="popup__form-input-error popup__form-input-error_type_popup-name popup__form-input-error_active"></span>
                 </section>
       
-                <section class="popup__form-section">
+                <section>
                     <input class="popup__form-input popup__form-input_type_job" type="text" name="popup-job" placeholder="Профессия" required minlength="2" maxlength="200">
-                    <span class="popup__form-input-error"></span>
+                    <span class="popup__form-input-error popup__form-input-error_type_popup-job popup__form-input-error_active"></span>
                 </section>
 
                 <button type="submit" class="popup__button-save">Сохранить</button>
@@ -84,14 +84,14 @@
 
                 <legend class="popup__heading">Новое место</legend>
 
-                <section class="popup__form-section">
+                <section>
                     <input class="popup__form-input popup__form-input_type_place" type="text" name="popup-place" placeholder="Название" required minlength="2" maxlength="30">
-                    <span class="popup__form-input-error"></span>
+                    <span class="popup__form-input-error popup__form-input-error_active popup__form-input-error_type_popup-place"></span>
                 </section>
       
-                <section class="popup__form-section">
+                <section>
                     <input class="popup__form-input popup__form-input_type_image" type="url" name="popup-image" placeholder="Ссылка на картинку" required>
-                    <span class="popup__form-input-error"></span>
+                    <span class="popup__form-input-error popup__form-input-error_active popup__form-input-error_type_popup-image"></span>
                 </section>
 
                 <button type="submit" class="popup__button-save">Сохранить</button>
