fixed images profile errors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
         <main>
             <section class="profile">
-                <img class="profile__avatar" src="images/profile__avatar.jpg" alt="Аватар пользователя">
+                <img class="profile__avatar" src="images/profile__img.jpg" alt="Аватар пользователя">
                 <div class="profile__profile-info">
                     <div class="profile__description">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -104,7 +104,7 @@
 
         <div class="popup__image-container">
 
-            <img class="popup__photo" src="/images/profile__avatar.jpg" alt="Название фото">
+            <img class="popup__photo" src="images/profile__img.jpg" alt="Название фото">
             <div class="popup__caption"></div>
             
             <button type="button" class="popup__button-close popup__button-close_image">
