--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 
                 <section>
                     <input class="popup__form-input popup__form-input_type_name" type="text" name="popup-name" placeholder="Имя" required minlength="2" maxlength="40">
-                    <span class="popup__form-input-error popup__form-input-error_type_popup-name popup__form-input-error_active"></span>
+                    <span class="popup__form-input-error popup__form-input-error_type_popup-name"></span>
                 </section>
       
                 <section>
                     <input class="popup__form-input popup__form-input_type_job" type="text" name="popup-job" placeholder="Профессия" required minlength="2" maxlength="200">
-                    <span class="popup__form-input-error popup__form-input-error_type_popup-job popup__form-input-error_active"></span>
+                    <span class="popup__form-input-error popup__form-input-error_type_popup-job"></span>
                 </section>
 
                 <button type="submit" class="popup__button-save">Сохранить</button>
@@ -74,7 +74,7 @@
 
     <div class="popup popup_type_place">
 
-        <form class="popup__form" name="place" action="#" method="post" novalidate>
+        <form class="popup__form popup__form_place" name="place" action="#" method="post" novalidate>
 
             <button type="button" class="popup__button-close popup__button-close_place">
                 <img class="popup__button-close-image" src="images/popup__button-close.svg" alt="Закрыть окно">
@@ -86,12 +86,12 @@
 
                 <section>
                     <input class="popup__form-input popup__form-input_type_place" type="text" name="popup-place" placeholder="Название" required minlength="2" maxlength="30">
-                    <span class="popup__form-input-error popup__form-input-error_active popup__form-input-error_type_popup-place"></span>
+                    <span class="popup__form-input-error popup__form-input-error_type_popup-place"></span>
                 </section>
       
                 <section>
                     <input class="popup__form-input popup__form-input_type_image" type="url" name="popup-image" placeholder="Ссылка на картинку" required>
-                    <span class="popup__form-input-error popup__form-input-error_active popup__form-input-error_type_popup-image"></span>
+                    <span class="popup__form-input-error popup__form-input-error_type_popup-image"></span>
                 </section>
 
                 <button type="submit" class="popup__button-save">Сохранить</button>
@@ -126,6 +126,7 @@
         </div>
     </template>
 
+    <script src="scripts/initialPlaces.js"></script>
     <script type="module" src="scripts/index.js"></script>
 
 </body>
