--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         </header>
         <main>
             <section class="profile">
-                <img class="profile__avatar" src="<%=require('./images/profile__img.jpg')%>" alt="Аватар пользователя">
+                <img class="profile__avatar">
                 <div class="profile__info">
                     <div class="profile__description">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -24,7 +24,7 @@
                             <img class="profile__button-edit-image" src="<%=require('./images/profile__button-edit.svg')%>" alt="Кнопка изменить" >
                         </button>
                     </div>
-                    <p class="profile__job">Исследователь океана</p>
+                    <p class="profile__about">Исследователь океана</p>
                 </div>
                 <button type="button" class="profile__button-add-image">
                     <img src="<%=require('./images/profile__button-add.svg')%>" alt="Кнопка добавить">
@@ -59,8 +59,8 @@
                 </section>
       
                 <section>
-                    <input class="popup__form-input popup__form-input_type_job" type="text" name="job" placeholder="Профессия" required minlength="2" maxlength="200">
-                    <span class="popup__form-input-error popup__form-input-error_type_job"></span>
+                    <input class="popup__form-input popup__form-input_type_about" type="text" name="about" placeholder="Профессия" required minlength="2" maxlength="200">
+                    <span class="popup__form-input-error popup__form-input-error_type_about"></span>
                 </section>
 
                 <button type="submit" class="popup__button-save">Сохранить</button>
@@ -88,8 +88,8 @@
                 </section>
       
                 <section>
-                    <input class="popup__form-input popup__form-input_type_image" type="url" name="image" placeholder="Ссылка на картинку" required>
-                    <span class="popup__form-input-error popup__form-input-error_type_image"></span>
+                    <input class="popup__form-input popup__form-input_type_link" type="url" name="link" placeholder="Ссылка на картинку" required>
+                    <span class="popup__form-input-error popup__form-input-error_type_link"></span>
                 </section>
 
                 <button type="submit" class="popup__button-save">Сохранить</button>
@@ -113,13 +113,57 @@
 
     </div>
 
+
+    <div class="popup popup_type_avatar">
+
+        <form class="popup__form popup__form_avatar" name="avatar" action="#" method="post" novalidate>
+            <button type="button" class="popup__button-close">
+                <img class="popup__button-close-image" src="<%=require('./images/popup__button-close.svg')%>" alt="Закрыть окно">
+            </button>
+
+            <fieldset class="popup__title">
+
+                <legend class="popup__heading">Обновить аватар</legend>
+
+                <section>
+                    <input class="popup__form-input popup__form-input_type_link" type="url" name="link" placeholder="Ссылка на картинку" required>
+                    <span class="popup__form-input-error popup__form-input-error_type_link"></span>
+                </section>
+
+                <button type="submit" class="popup__button-save">Сохранить</button>
+
+            </fieldset>
+
+        </form>
+    </div>
+
+    <div class="popup popup_type_remove">
+
+        <form class="popup__form" name="remove" action="#" method="post" novalidate>
+            <button type="button" class="popup__button-close popup__button-close_image">
+                <img class="popup__button-close-image" src="<%=require('./images/popup__button-close.svg')%>" alt="Закрыть окно">
+            </button>
+
+            <fieldset class="popup__title">
+
+                <legend class="popup__heading">Вы уверены</legend>
+
+                <button type="submit" class="popup__button-save">Да</button>
+
+            </fieldset>
+        </form>
+    </div>
+
     <template class="template">
         <div class="elements__element">
             <img class="elements__image" src="item.link" alt=item.name>
             <button type="button" class="elements__btn-remove"></button>
             <div class="elements__place">
-            <h2 class="elements__name"></h2>
-            <button type="button" class="elements__like"></button>
+                <h2 class="elements__name"></h2>
+                <div class="cards__likes-container">
+                    <button type="button" class="elements__like"></button>
+                    <div class="elements__like-counter"></div>
+                </div>
             </div>
         </div>
     </template>
